// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setFormErrors doesn't sets an error on unknown field 1`] = `
Object {
  "section1": Object {
    "questions": Object {
      "questionString": Object {
        "type": "text",
      },
    },
  },
  "section2": Object {
    "questions": Object {
      "questionPeriod": Object {
        "metadata": Object {
          "notExist": Object {
            "errorMessages": "Sub field does not exist",
          },
        },
        "type": "period",
      },
    },
  },
}
`;

exports[`setFormErrors sets error messages on different fields 1`] = `
Object {
  "section1": Object {
    "questions": Object {
      "questionString": Object {
        "metadata": Object {
          "errorMessages": Array [
            "error string 1",
            "error string 2",
          ],
        },
        "type": "text",
      },
    },
  },
  "section2": Object {
    "questions": Object {
      "questionPeriod": Object {
        "metadata": Object {
          "from": Object {
            "errorMessages": Array [
              "Error questionPeriod 1",
              "Error questionPeriod 2",
            ],
          },
          "to": Object {
            "errorMessages": Array [
              "Error questionPeriod to 1",
              "Error questionPeriod to 2",
            ],
          },
        },
        "type": "period",
      },
    },
  },
}
`;
